--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <ul>
-        <li>Vagrant</li>
+        <li>Vagrant: capítulo um</li>
         <li>Dockeryyyyy</li>
         <li>Ansible</li>
         <li>Integração Contínua: versão um</li>
