--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <ul>
-	<li>Aterações</li>
+	<li>Alterações</li>
         <li>Vagrant: capítulo um</li>
         <li>Dockerapmqpwem</li>
         <li>Ansible nao seioi</li>
